--- a/二叉树最大深度.md
+++ b/二叉树最大深度.md
@@ -1,4 +1,13 @@
+# 二叉树最大深度
+
+## 思路：
+
+![1](E:\Git桌面版\LeetCodeStudy\1.png)
+
+## 题解：
+
 ```java
+//递归
 public class Offer55 {
     public int maxDepth(TreeNode root) {
         if(root == null) return 0;
@@ -15,3 +24,28 @@ public class Offer55 {
      TreeNode(int x) { val = x; }
 }
 ```
+
+层序遍历
+
+> 一个queue列表 一个tmp列表，当queue不为空时，遍历queue将左右节点加到tmp中，然后赋值给queue，高度+1
+
+```java
+ public int maxDepth(TreeNode root) {
+        if (root == null) return 0;
+        int res = 0;//高度
+        LinkedList<TreeNode> queue = new LinkedList<>();//存放下一层节点
+        queue.add(root);
+        LinkedList<TreeNode> tmp ;
+        while (!queue.isEmpty()){//当队列不为空
+            tmp = new LinkedList<>();
+            for (TreeNode node: queue) {
+                if (node.left != null) tmp.add(node.left);
+                if (node.right != null) tmp.add(node.right);
+            }
+            queue = tmp;
+            res++;
+        }
+        return res;
+    }
+```
+
